--- a/sokoban/sokoban/sokoban.vcxproj
+++ b/sokoban/sokoban/sokoban.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Mapreader.cpp" />
-    <ClCompile Include="sokoban.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapReader.h" />
