Basic of pathfinder added

--- a/sokoban/sokoban/sokoban.vcxproj.filters
+++ b/sokoban/sokoban/sokoban.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Solve.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PathFindercpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapInputHandler.h">
