--- a/sokoban/sokoban/sokoban.vcxproj
+++ b/sokoban/sokoban/sokoban.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="MapInputHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PathFindercpp.cpp" />
     <ClCompile Include="Solve.cpp" />
   </ItemGroup>
   <ItemGroup>
